create_term_df() tested, ready to make DFs for indivi terms w 'term' column

--- a/datasets/Not_Your_Mascot_datasets.ipynb
+++ b/datasets/Not_Your_Mascot_datasets.ipynb
@@ -4113,74 +4113,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4151\n",
-      "                                                   text           author  \\\n",
-      "406   @TBM929 screw  the 49ers. the ass whoopin's th...   Krisleggettxix   \n",
-      "660   @sportslarryknbr Hoks killed the game. And Sea...           l1orso   \n",
-      "663   @CSN49ers Refs screwed @49ers all game, and in...      dartcatcher   \n",
-      "1219  not gonna lie the honest only reason I want th...      BriaShannon   \n",
-      "1744  @C_M0tt21 are dirty and rolling and 49ers kill...    Dan_Devine805   \n",
-      "229   @RGT_85 love you rgt…. don't hurt my feelings ...      NSM54899577   \n",
-      "522   George Kittle makes me look stupid and I love ...          Kes8514   \n",
-      "663   @squirrelsheep @Mvpeterson17 @fraolbogale @jho...  sportsg34960583   \n",
-      "1015  @ABCPolitics @realDonaldTrump Both are as stup...   geoff_deweaver   \n",
-      "1874  Overall,Nothing Went The @49ers Way Today. One...       FIREBULL77   \n",
-      "2569  @joshuapantoja58 The 49ers killed it tonight!!...    mastergriz964   \n",
-      "3972  @49ers @elguapo Twice we were in FG range and ...       GunneritoZ   \n",
-      "4621  I hope the 49ers get killed and their stupid a...      LilyAnna143   \n",
-      "4830  On of the low profile improvements the #49ers ...     bram_parsons   \n",
-      "4862  @knbr #49ers chokers! Stupid penalty in fair c...         KidKylar   \n",
-      "4868  @49ers another heartbreak as usual, as our QB ...       white_jude   \n",
-      "5401  Ray Lewis never killed anyone wtf you can stop...     lumpybuttons   \n",
-      "5602  Stupid. Take 3 points off the board and get yo...        BigVinnyB   \n",
-      "5873  All i want today is the RAVENS TO WIN AGAINST ...         perro411   \n",
-      "6484  @957thegame Im the biggest #49ers fan but thos...  MilesDawkins247   \n",
-      "6807  Rooting for 49ers and Raiders??? BITCH ARE YOU...        Kennitooo   \n",
-      "7037  The 49ers killed themselves on that drive with...   DoubleKKDouble   \n",
-      "7084  @49ers_mayra I know and we killed em all game....           Ando83   \n",
-      "32    @TJLang70 Cripes.. packers got killed by 49ers...       shedantler   \n",
-      "101   @benbbaldwin The team's poor record against 2n...   DrJasonJohnson   \n",
-      "\n",
-      "        term  \n",
-      "406   killed  \n",
-      "660   killed  \n",
-      "663   killed  \n",
-      "1219  killed  \n",
-      "1744  killed  \n",
-      "229   killed  \n",
-      "522   killed  \n",
-      "663   killed  \n",
-      "1015  killed  \n",
-      "1874  killed  \n",
-      "2569  killed  \n",
-      "3972  killed  \n",
-      "4621  killed  \n",
-      "4830  killed  \n",
-      "4862  killed  \n",
-      "4868  killed  \n",
-      "5401  killed  \n",
-      "5602  killed  \n",
-      "5873  killed  \n",
-      "6484  killed  \n",
-      "6807  killed  \n",
-      "7037  killed  \n",
-      "7084  killed  \n",
-      "32    killed  \n",
-      "101   killed  \n"
+      "4151\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>author</th>\n",
+       "      <th>term</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>@TBM929 screw  the 49ers. the ass whoopin's th...</td>\n",
+       "      <td>Krisleggettxix</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>@sportslarryknbr Hoks killed the game. And Sea...</td>\n",
+       "      <td>l1orso</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>@CSN49ers Refs screwed @49ers all game, and in...</td>\n",
+       "      <td>dartcatcher</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>not gonna lie the honest only reason I want th...</td>\n",
+       "      <td>BriaShannon</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1744</th>\n",
+       "      <td>@C_M0tt21 are dirty and rolling and 49ers kill...</td>\n",
+       "      <td>Dan_Devine805</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>@RGT_85 love you rgt…. don't hurt my feelings ...</td>\n",
+       "      <td>NSM54899577</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522</th>\n",
+       "      <td>George Kittle makes me look stupid and I love ...</td>\n",
+       "      <td>Kes8514</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>@squirrelsheep @Mvpeterson17 @fraolbogale @jho...</td>\n",
+       "      <td>sportsg34960583</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1015</th>\n",
+       "      <td>@ABCPolitics @realDonaldTrump Both are as stup...</td>\n",
+       "      <td>geoff_deweaver</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1874</th>\n",
+       "      <td>Overall,Nothing Went The @49ers Way Today. One...</td>\n",
+       "      <td>FIREBULL77</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2569</th>\n",
+       "      <td>@joshuapantoja58 The 49ers killed it tonight!!...</td>\n",
+       "      <td>mastergriz964</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3972</th>\n",
+       "      <td>@49ers @elguapo Twice we were in FG range and ...</td>\n",
+       "      <td>GunneritoZ</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4621</th>\n",
+       "      <td>I hope the 49ers get killed and their stupid a...</td>\n",
+       "      <td>LilyAnna143</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4830</th>\n",
+       "      <td>On of the low profile improvements the #49ers ...</td>\n",
+       "      <td>bram_parsons</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4862</th>\n",
+       "      <td>@knbr #49ers chokers! Stupid penalty in fair c...</td>\n",
+       "      <td>KidKylar</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4868</th>\n",
+       "      <td>@49ers another heartbreak as usual, as our QB ...</td>\n",
+       "      <td>white_jude</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5401</th>\n",
+       "      <td>Ray Lewis never killed anyone wtf you can stop...</td>\n",
+       "      <td>lumpybuttons</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5602</th>\n",
+       "      <td>Stupid. Take 3 points off the board and get yo...</td>\n",
+       "      <td>BigVinnyB</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5873</th>\n",
+       "      <td>All i want today is the RAVENS TO WIN AGAINST ...</td>\n",
+       "      <td>perro411</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6484</th>\n",
+       "      <td>@957thegame Im the biggest #49ers fan but thos...</td>\n",
+       "      <td>MilesDawkins247</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6807</th>\n",
+       "      <td>Rooting for 49ers and Raiders??? BITCH ARE YOU...</td>\n",
+       "      <td>Kennitooo</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7037</th>\n",
+       "      <td>The 49ers killed themselves on that drive with...</td>\n",
+       "      <td>DoubleKKDouble</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7084</th>\n",
+       "      <td>@49ers_mayra I know and we killed em all game....</td>\n",
+       "      <td>Ando83</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>@TJLang70 Cripes.. packers got killed by 49ers...</td>\n",
+       "      <td>shedantler</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>@benbbaldwin The team's poor record against 2n...</td>\n",
+       "      <td>DrJasonJohnson</td>\n",
+       "      <td>killed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text           author  \\\n",
+       "406   @TBM929 screw  the 49ers. the ass whoopin's th...   Krisleggettxix   \n",
+       "660   @sportslarryknbr Hoks killed the game. And Sea...           l1orso   \n",
+       "663   @CSN49ers Refs screwed @49ers all game, and in...      dartcatcher   \n",
+       "1219  not gonna lie the honest only reason I want th...      BriaShannon   \n",
+       "1744  @C_M0tt21 are dirty and rolling and 49ers kill...    Dan_Devine805   \n",
+       "229   @RGT_85 love you rgt…. don't hurt my feelings ...      NSM54899577   \n",
+       "522   George Kittle makes me look stupid and I love ...          Kes8514   \n",
+       "663   @squirrelsheep @Mvpeterson17 @fraolbogale @jho...  sportsg34960583   \n",
+       "1015  @ABCPolitics @realDonaldTrump Both are as stup...   geoff_deweaver   \n",
+       "1874  Overall,Nothing Went The @49ers Way Today. One...       FIREBULL77   \n",
+       "2569  @joshuapantoja58 The 49ers killed it tonight!!...    mastergriz964   \n",
+       "3972  @49ers @elguapo Twice we were in FG range and ...       GunneritoZ   \n",
+       "4621  I hope the 49ers get killed and their stupid a...      LilyAnna143   \n",
+       "4830  On of the low profile improvements the #49ers ...     bram_parsons   \n",
+       "4862  @knbr #49ers chokers! Stupid penalty in fair c...         KidKylar   \n",
+       "4868  @49ers another heartbreak as usual, as our QB ...       white_jude   \n",
+       "5401  Ray Lewis never killed anyone wtf you can stop...     lumpybuttons   \n",
+       "5602  Stupid. Take 3 points off the board and get yo...        BigVinnyB   \n",
+       "5873  All i want today is the RAVENS TO WIN AGAINST ...         perro411   \n",
+       "6484  @957thegame Im the biggest #49ers fan but thos...  MilesDawkins247   \n",
+       "6807  Rooting for 49ers and Raiders??? BITCH ARE YOU...        Kennitooo   \n",
+       "7037  The 49ers killed themselves on that drive with...   DoubleKKDouble   \n",
+       "7084  @49ers_mayra I know and we killed em all game....           Ando83   \n",
+       "32    @TJLang70 Cripes.. packers got killed by 49ers...       shedantler   \n",
+       "101   @benbbaldwin The team's poor record against 2n...   DrJasonJohnson   \n",
+       "\n",
+       "        term  \n",
+       "406   killed  \n",
+       "660   killed  \n",
+       "663   killed  \n",
+       "1219  killed  \n",
+       "1744  killed  \n",
+       "229   killed  \n",
+       "522   killed  \n",
+       "663   killed  \n",
+       "1015  killed  \n",
+       "1874  killed  \n",
+       "2569  killed  \n",
+       "3972  killed  \n",
+       "4621  killed  \n",
+       "4830  killed  \n",
+       "4862  killed  \n",
+       "4868  killed  \n",
+       "5401  killed  \n",
+       "5602  killed  \n",
+       "5873  killed  \n",
+       "6484  killed  \n",
+       "6807  killed  \n",
+       "7037  killed  \n",
+       "7084  killed  \n",
+       "32    killed  \n",
+       "101   killed  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(len(sf_test_df))\n",
     "\n",
-    "print(sf_test_df.head(25))"
+    "sf_test_df.head(25)"
    ]
   },
   {
