--- a/Not_Your_Mascot_datasets.ipynb
+++ b/Not_Your_Mascot_datasets.ipynb
@@ -4111,7 +4111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4136,6 +4136,449 @@
     "        \n",
     "    return full_terms_df\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "term_list = ['dirty','filthy','stupid','ugly','indian',\n",
+    "             'blood','scalp','savage','dead','killed',\n",
+    "             'sexy','indian blood','drunk','injun',\n",
+    "             'exterminate','extinct','firewater',\n",
+    "             'reservation','smallpox','ignorant',\n",
+    "             'raped','die','dumb','backwards',\n",
+    "             'inbred','died']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sf_49ers_queries_master_df\n",
+    "\n",
+    "sf_49ers_terms_full_df = get_full_terms_df(sf_49ers_queries_master_df, term_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44504\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>author</th>\n",
+       "      <th>term</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>@Triplebake88 @DanSileoShow @ProFootballTalk @...</td>\n",
+       "      <td>Thomason03</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>@Phillies_49ers @codymurray1 @JeffAllen71 100%...</td>\n",
+       "      <td>ZhombieV</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>So Florio's way out of the mess he's gotten hi...</td>\n",
+       "      <td>Aksala07273193</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>@5ivves @m_vogan @pebdog5 @AB_3127 @ProFootbal...</td>\n",
+       "      <td>9nerGang5</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>@AB_3127 @ProFootballTalk 100% of 49ers fans H...</td>\n",
+       "      <td>MyleStates</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>@Ragnod49 @ArrowheadAddict Much respect!! \\n\\n...</td>\n",
+       "      <td>ArrighiOrosz</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>@davidmakepeace @ArrowheadAddict Chiefs fan he...</td>\n",
+       "      <td>ArrighiOrosz</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>@ProFootballTalk You also said Jimmy was gonna...</td>\n",
+       "      <td>Turo420</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>I think I'm rooting for Mahomes and the Chiefs...</td>\n",
+       "      <td>skepticgoat</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>@JeffAllen71 @ProFootballTalk The 49ers don't ...</td>\n",
+       "      <td>DaRealLopeezi</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>I was an Infantryman. I believe in the trenche...</td>\n",
+       "      <td>InspireMe2287</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>@pattyWarren13 @ProFootballTalk Niners fans sh...</td>\n",
+       "      <td>ArrighiOrosz</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>@emmerz08 @YourBoyRocha So basically no one sa...</td>\n",
+       "      <td>H0neybadger49er</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>@ProFootballTalk No, we're hearing what you CL...</td>\n",
+       "      <td>d_morivers</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>@ArrowheadAddict Florio is a grade A certifiab...</td>\n",
+       "      <td>rf092115</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>@ProFootballTalk I can not believe you suggest...</td>\n",
+       "      <td>MikeMonnig</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>@ProFootballTalk No, they're getting mad at ho...</td>\n",
+       "      <td>ARMYmomsRock</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>@Perry_49ers @ProFootballTalk He’s not wrong. ...</td>\n",
+       "      <td>Zedd1sDead</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>@AbrahamGN2 About being physical sure. No one ...</td>\n",
+       "      <td>dwoverdrive</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>@ProFootballTalk YOU said that you big fat hai...</td>\n",
+       "      <td>ohraiyan</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>@ChuckModi1 Vikings fan here and I'm very sens...</td>\n",
+       "      <td>realchriswayne</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Yeah. I'd prefer my 49ers NOT play dirty. \\n\\n...</td>\n",
+       "      <td>ItzGetty</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>@Steve_in_RI If the 49ers put out a hit on Mah...</td>\n",
+       "      <td>seancates</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>XLVI was my favorite but best performance the ...</td>\n",
+       "      <td>Larkwins</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>@kanaka_nui If the 49ers put out a hit on Maho...</td>\n",
+       "      <td>seancates</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>@ProFootballTalk @gmalana1 If the 49ers put ou...</td>\n",
+       "      <td>seancates</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>@ProFootballTalk @kanaka_nui @peter_king If th...</td>\n",
+       "      <td>seancates</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>@ProFootballTalk If the 49ers put out a hit on...</td>\n",
+       "      <td>seancates</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Chiefs fans when Mike Florio suggests the 49er...</td>\n",
+       "      <td>trevorwh1t3</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>@dwoverdrive Bosa just got a big fine for targ...</td>\n",
+       "      <td>love2golf</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>@PFTPMPosse @ProFootballTalk @CSimmsQB @mattca...</td>\n",
+       "      <td>GatorGonnaGitYa</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Don't say it, don't say it, don't say it...\\n\\...</td>\n",
+       "      <td>LyleGraversen</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>@lolly83485222 @CSimmsQB “Is it just Sorensen ...</td>\n",
+       "      <td>kc_ranger</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>@49ers go ahead and take a penalty for a late ...</td>\n",
+       "      <td>DomonicPyle</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>“I’m not saying it should be part of the delib...</td>\n",
+       "      <td>jtpenfield</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>You basically nudged the @49ers to hit him in ...</td>\n",
+       "      <td>ChiefsSinceDay1</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>“Some Chiefs fans are getting a little riled u...</td>\n",
+       "      <td>platinombrero</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>So...first you talk major garbage about Jimmy ...</td>\n",
+       "      <td>ColdFireChief</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>@ProFootballTalk Mike Florio you are a piece o...</td>\n",
+       "      <td>wsk28rules</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>@NFL @49ers @jstaley74 This should have went t...</td>\n",
+       "      <td>SmithBradden</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>I don’t see how @NBCSports stands with @ProFoo...</td>\n",
+       "      <td>LanceTHESPOKEN</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>@ProFootballTalk Encouraging 49ers to play dir...</td>\n",
+       "      <td>ChiefNB82</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>@Nolegal02 I pull for NFL teams with the most ...</td>\n",
+       "      <td>chrisd8n</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>People can say what they want the reason why t...</td>\n",
+       "      <td>BIIIG_SIMBA76</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Ya know what maybe the 49ers ain’t such a bad ...</td>\n",
+       "      <td>Phenomenal_78</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>@xomb0ne @bomani_jones I think it’s crazy caus...</td>\n",
+       "      <td>chase_cco</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>@briangantt1 Agree, and not afraid to get a li...</td>\n",
+       "      <td>DeeDub67</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Super Bowl LIV Is Set, Thanks to an Intense—bu...</td>\n",
+       "      <td>speedingticketk</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Super Bowl LIV Is Set, Thanks to an Intense—bu...</td>\n",
+       "      <td>kcdefensecouns2</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>New on SI: Super Bowl LIV Is Set, Thanks to an...</td>\n",
+       "      <td>joehanover</td>\n",
+       "      <td>dirty</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 text           author   term\n",
+       "0   @Triplebake88 @DanSileoShow @ProFootballTalk @...       Thomason03  dirty\n",
+       "1   @Phillies_49ers @codymurray1 @JeffAllen71 100%...         ZhombieV  dirty\n",
+       "2   So Florio's way out of the mess he's gotten hi...   Aksala07273193  dirty\n",
+       "3   @5ivves @m_vogan @pebdog5 @AB_3127 @ProFootbal...        9nerGang5  dirty\n",
+       "4   @AB_3127 @ProFootballTalk 100% of 49ers fans H...       MyleStates  dirty\n",
+       "5   @Ragnod49 @ArrowheadAddict Much respect!! \\n\\n...     ArrighiOrosz  dirty\n",
+       "6   @davidmakepeace @ArrowheadAddict Chiefs fan he...     ArrighiOrosz  dirty\n",
+       "7   @ProFootballTalk You also said Jimmy was gonna...          Turo420  dirty\n",
+       "8   I think I'm rooting for Mahomes and the Chiefs...      skepticgoat  dirty\n",
+       "9   @JeffAllen71 @ProFootballTalk The 49ers don't ...    DaRealLopeezi  dirty\n",
+       "10  I was an Infantryman. I believe in the trenche...    InspireMe2287  dirty\n",
+       "11  @pattyWarren13 @ProFootballTalk Niners fans sh...     ArrighiOrosz  dirty\n",
+       "12  @emmerz08 @YourBoyRocha So basically no one sa...  H0neybadger49er  dirty\n",
+       "13  @ProFootballTalk No, we're hearing what you CL...       d_morivers  dirty\n",
+       "14  @ArrowheadAddict Florio is a grade A certifiab...         rf092115  dirty\n",
+       "15  @ProFootballTalk I can not believe you suggest...       MikeMonnig  dirty\n",
+       "16  @ProFootballTalk No, they're getting mad at ho...     ARMYmomsRock  dirty\n",
+       "17  @Perry_49ers @ProFootballTalk He’s not wrong. ...       Zedd1sDead  dirty\n",
+       "18  @AbrahamGN2 About being physical sure. No one ...      dwoverdrive  dirty\n",
+       "19  @ProFootballTalk YOU said that you big fat hai...         ohraiyan  dirty\n",
+       "20  @ChuckModi1 Vikings fan here and I'm very sens...   realchriswayne  dirty\n",
+       "21  Yeah. I'd prefer my 49ers NOT play dirty. \\n\\n...         ItzGetty  dirty\n",
+       "22  @Steve_in_RI If the 49ers put out a hit on Mah...        seancates  dirty\n",
+       "23  XLVI was my favorite but best performance the ...         Larkwins  dirty\n",
+       "24  @kanaka_nui If the 49ers put out a hit on Maho...        seancates  dirty\n",
+       "25  @ProFootballTalk @gmalana1 If the 49ers put ou...        seancates  dirty\n",
+       "26  @ProFootballTalk @kanaka_nui @peter_king If th...        seancates  dirty\n",
+       "27  @ProFootballTalk If the 49ers put out a hit on...        seancates  dirty\n",
+       "28  Chiefs fans when Mike Florio suggests the 49er...      trevorwh1t3  dirty\n",
+       "29  @dwoverdrive Bosa just got a big fine for targ...        love2golf  dirty\n",
+       "30  @PFTPMPosse @ProFootballTalk @CSimmsQB @mattca...  GatorGonnaGitYa  dirty\n",
+       "31  Don't say it, don't say it, don't say it...\\n\\...    LyleGraversen  dirty\n",
+       "32  @lolly83485222 @CSimmsQB “Is it just Sorensen ...        kc_ranger  dirty\n",
+       "33  @49ers go ahead and take a penalty for a late ...      DomonicPyle  dirty\n",
+       "34  “I’m not saying it should be part of the delib...       jtpenfield  dirty\n",
+       "35  You basically nudged the @49ers to hit him in ...  ChiefsSinceDay1  dirty\n",
+       "36  “Some Chiefs fans are getting a little riled u...    platinombrero  dirty\n",
+       "37  So...first you talk major garbage about Jimmy ...    ColdFireChief  dirty\n",
+       "38  @ProFootballTalk Mike Florio you are a piece o...       wsk28rules  dirty\n",
+       "39  @NFL @49ers @jstaley74 This should have went t...     SmithBradden  dirty\n",
+       "40  I don’t see how @NBCSports stands with @ProFoo...   LanceTHESPOKEN  dirty\n",
+       "41  @ProFootballTalk Encouraging 49ers to play dir...        ChiefNB82  dirty\n",
+       "42  @Nolegal02 I pull for NFL teams with the most ...         chrisd8n  dirty\n",
+       "43  People can say what they want the reason why t...    BIIIG_SIMBA76  dirty\n",
+       "44  Ya know what maybe the 49ers ain’t such a bad ...    Phenomenal_78  dirty\n",
+       "45  @xomb0ne @bomani_jones I think it’s crazy caus...        chase_cco  dirty\n",
+       "46  @briangantt1 Agree, and not afraid to get a li...         DeeDub67  dirty\n",
+       "47  Super Bowl LIV Is Set, Thanks to an Intense—bu...  speedingticketk  dirty\n",
+       "48  Super Bowl LIV Is Set, Thanks to an Intense—bu...  kcdefensecouns2  dirty\n",
+       "49  New on SI: Super Bowl LIV Is Set, Thanks to an...       joehanover  dirty"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(sf_49ers_terms_full_df))\n",
+    "\n",
+    "sf_49ers_terms_full_df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sf_49ers_terms_full_df.to_csv('sf_49ers_terms_full_df.csv')"
    ]
   },
   {
