offensive terms counted in each dataset, ~ 170k

--- a/Not_Your_Mascot_datasets.ipynb
+++ b/Not_Your_Mascot_datasets.ipynb
@@ -5173,6 +5173,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### how many offensive terms exist in each team's data set?\n",
+    "\n",
+    "we can check to see how many of the 27 offensive terms appear in conjunction with each team's name:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "offensive terms/phrases mentioned with the San Francisco 49ers:  44504\n",
+      "offensive terms/phrases mentioned with the Washington R*dskins:  45878\n",
+      "offensive terms/phrases mentioned with the Kansas City Chiefs:  82386\n"
+     ]
+    }
+   ],
+   "source": [
+    "terms_in_49ers = len(sf_49ers_terms_full_df)\n",
+    "\n",
+    "terms_in_rs = len(wa_rs_terms_full_df)\n",
+    "\n",
+    "terms_in_chiefs = len(kc_chiefs_terms_full_df)\n",
+    "\n",
+    "print('offensive terms/phrases mentioned with the San Francisco 49ers: ', terms_in_49ers)\n",
+    "\n",
+    "print('offensive terms/phrases mentioned with the Washington R*dskins: ', terms_in_rs)\n",
+    "\n",
+    "print('offensive terms/phrases mentioned with the Kansas City Chiefs: ', terms_in_chiefs)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
