moved text processing function cells to bottom

--- a/Not_Your_Mascot_datasets.ipynb
+++ b/Not_Your_Mascot_datasets.ipynb
@@ -48,6 +48,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### getting the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
@@ -223,152 +230,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_tweets_for_vocab(doc, search_term):\n",
-    "    \n",
-    "    '''\n",
-    "    takes input document:\n",
-    "    \n",
-    "    * lowercases\n",
-    "    * removes non-alpha characters\n",
-    "    * removes tweet artifacts (screen names, 'RT', '@')\n",
-    "    * removes stopwords\n",
-    "    * tokenizes\n",
-    "    \n",
-    "    returns clean document\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    # remove punctuation\n",
-    "    \n",
-    "    doc = ''.join(c if c.isalpha() else ' ' for c in doc)\n",
-    "    \n",
-    "    # tokenize\n",
-    "    \n",
-    "    split_tokens = doc.split()\n",
-    "    \n",
-    "    # remove twitter artifacts & search term\n",
-    "    \n",
-    "    cleaner_tokens = [word.lower() for word in split_tokens\n",
-    "                     if 'http' not in word\n",
-    "                     and '@' not in word\n",
-    "                     and '<' not in word\n",
-    "                     and 'RT' not in word\n",
-    "                     and 'amp' not in word.lower()\n",
-    "                     and search_term.lower() not in word.lower()\n",
-    "                     ]\n",
-    "    \n",
-    "    # remove stopwords\n",
-    "    \n",
-    "    clean_tokens = [t for t in cleaner_tokens if t.lower() not in stopwords.words('english')]\n",
-    "    \n",
-    "    return clean_tokens\n",
-    "\n",
-    "def get_vocab_df(docs):\n",
-    "    \n",
-    "    '''\n",
-    "    takes a list of clean docs\n",
-    "    \n",
-    "    returns dataframe with vocabulary counts\n",
-    "    returns total words\n",
-    "    returns unique words\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    vocab = []\n",
-    "    \n",
-    "    for document in docs:\n",
-    "        \n",
-    "        for word in document:\n",
-    "            \n",
-    "            vocab.append(word)\n",
-    "    \n",
-    "    total_words = len(vocab)\n",
-    "    \n",
-    "    word_count = Counter(vocab)\n",
-    "    \n",
-    "    num_unique_words = len(word_count)\n",
-    "    \n",
-    "    # Counter() is a dictionary, has to be converted as such\n",
-    "    \n",
-    "    vocab_df = pd.DataFrame.from_dict(word_count, orient='index')\n",
-    "    \n",
-    "    # rearrange the dataframe so it's easy to index/use\n",
-    "    # sort by number of times a word appears\n",
-    "    # add an index & rename columns\n",
-    "    \n",
-    "    vocab_df = vocab_df.sort_values(by=0, ascending=False)\n",
-    "    \n",
-    "    vocab_df = vocab_df.reset_index().rename(columns={'index':'word', 0:'count'})\n",
-    "    \n",
-    "    # return df with sorted vocab\n",
-    "    \n",
-    "    #return vocab_df.sort_values(by='count', ascending=False), total_words, num_unique_words\n",
-    " \n",
-    "    return vocab_df, total_words, num_unique_words\n",
-    "\n",
-    "    #return total_words, num_unique_words, vocab_df\n",
-    "\n",
-    "\n",
-    "def clean_text_for_wordcloud(df, col, search_term):\n",
-    "\n",
-    "    '''\n",
-    "    takes input dataframe\n",
-    "\n",
-    "    * applies light cleaning for wordcloud\n",
-    "    * removes search term, non alpha characters & tweet artifacts\n",
-    "\n",
-    "    returns dataframe with clean text\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    for i in range(len(df[col])):\n",
-    "        \n",
-    "        df[col][i] = ' '.join([word for word in df[col][i].split()\n",
-    "                               if 'http' not in word and '@' not in word\n",
-    "                               and '<' not in word and 'RT' not in word\n",
-    "                               and 'amp' not in word.lower() and 'rt' not in word\n",
-    "                               and search_term.lower() not in word.lower()])\n",
-    "        \n",
-    "    return df\n",
-    "\n",
-    "def get_wordcloud(df, col):\n",
-    "    \n",
-    "    '''\n",
-    "    takes a clean dataframe\n",
-    "    \n",
-    "    generates wordcloud\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    stopwords = set(STOPWORDS)\n",
-    "    \n",
-    "    wordcloud = WordCloud(background_color='white',\n",
-    "                          stopwords=stopwords,\n",
-    "                          random_state=0).generate(' '.join([i for i in df[col]]))\n",
-    "    \n",
-    "    plt.figure(figsize=(20, 10), facecolor='k')\n",
-    "    \n",
-    "    plt.imshow(wordcloud)\n",
-    "    \n",
-    "    plt.axis('off')\n",
-    "    \n",
-    "    # print date/time wordcloud is generated\n",
-    "    \n",
-    "    datetime_obj = datetime.datetime.now()\n",
-    "    \n",
-    "    time_delta = datetime.timedelta(hours=5)\n",
-    "    \n",
-    "    time_now_EST = datetime_obj - time_delta\n",
-    "    \n",
-    "    print('Wordcloud Generated at: ', time_now_EST, ' EST')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -390,11 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tweet_objects = get_tweet_object('query', datetime.datetime(2007,1,24), datetime.datetime(2020,1,24), 100000, include_retweets=False)\n",
-    "# raw_df = tweet_obj_to_df(tweet_objects)\n",
-    "# print(len(raw_df), '\\n')\n",
-    "# print(raw_df.head(25))\n",
-    "# raw_df.to_csv('raw_df_Jan_24_2020.csv')\n",
+    "# create raw df\n",
     "\n",
     "rdskn_raw_df = tweet_obj_to_df(rdskin_tweet_objects)"
    ]
@@ -5211,11 +5068,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### text processing functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def clean_tweets_for_vocab(doc, search_term):\n",
+    "    \n",
+    "    '''\n",
+    "    takes input document:\n",
+    "    \n",
+    "    * lowercases\n",
+    "    * removes non-alpha characters\n",
+    "    * removes tweet artifacts (screen names, 'RT', '@')\n",
+    "    * removes stopwords\n",
+    "    * tokenizes\n",
+    "    \n",
+    "    returns clean document\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    # remove punctuation\n",
+    "    \n",
+    "    doc = ''.join(c if c.isalpha() else ' ' for c in doc)\n",
+    "    \n",
+    "    # tokenize\n",
+    "    \n",
+    "    split_tokens = doc.split()\n",
+    "    \n",
+    "    # remove twitter artifacts & search term\n",
+    "    \n",
+    "    cleaner_tokens = [word.lower() for word in split_tokens\n",
+    "                     if 'http' not in word\n",
+    "                     and '@' not in word\n",
+    "                     and '<' not in word\n",
+    "                     and 'RT' not in word\n",
+    "                     and 'amp' not in word.lower()\n",
+    "                     and search_term.lower() not in word.lower()\n",
+    "                     ]\n",
+    "    \n",
+    "    # remove stopwords\n",
+    "    \n",
+    "    clean_tokens = [t for t in cleaner_tokens if t.lower() not in stopwords.words('english')]\n",
+    "    \n",
+    "    return clean_tokens\n",
+    "\n",
+    "def get_vocab_df(docs):\n",
+    "    \n",
+    "    '''\n",
+    "    takes a list of clean docs\n",
+    "    \n",
+    "    returns dataframe with vocabulary counts\n",
+    "    returns total words\n",
+    "    returns unique words\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    vocab = []\n",
+    "    \n",
+    "    for document in docs:\n",
+    "        \n",
+    "        for word in document:\n",
+    "            \n",
+    "            vocab.append(word)\n",
+    "    \n",
+    "    total_words = len(vocab)\n",
+    "    \n",
+    "    word_count = Counter(vocab)\n",
+    "    \n",
+    "    num_unique_words = len(word_count)\n",
+    "    \n",
+    "    # Counter() is a dictionary, has to be converted as such\n",
+    "    \n",
+    "    vocab_df = pd.DataFrame.from_dict(word_count, orient='index')\n",
+    "    \n",
+    "    # rearrange the dataframe so it's easy to index/use\n",
+    "    # sort by number of times a word appears\n",
+    "    # add an index & rename columns\n",
+    "    \n",
+    "    vocab_df = vocab_df.sort_values(by=0, ascending=False)\n",
+    "    \n",
+    "    vocab_df = vocab_df.reset_index().rename(columns={'index':'word', 0:'count'})\n",
+    "\n",
+    "    return vocab_df, total_words, num_unique_words\n",
+    "\n",
+    "\n",
+    "def clean_text_for_wordcloud(df, col, search_term):\n",
+    "\n",
+    "    '''\n",
+    "    takes input dataframe\n",
+    "\n",
+    "    * applies light cleaning for wordcloud\n",
+    "    * removes search term, non alpha characters & tweet artifacts\n",
+    "\n",
+    "    returns dataframe with clean text\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    for i in range(len(df[col])):\n",
+    "        \n",
+    "        df[col][i] = ' '.join([word for word in df[col][i].split()\n",
+    "                               if 'http' not in word and '@' not in word\n",
+    "                               and '<' not in word and 'RT' not in word\n",
+    "                               and 'amp' not in word.lower() and 'rt' not in word\n",
+    "                               and search_term.lower() not in word.lower()])\n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "def get_wordcloud(df, col):\n",
+    "    \n",
+    "    '''\n",
+    "    takes a clean dataframe\n",
+    "    \n",
+    "    generates wordcloud\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    stopwords = set(STOPWORDS)\n",
+    "    \n",
+    "    wordcloud = WordCloud(background_color='white',\n",
+    "                          stopwords=stopwords,\n",
+    "                          random_state=0).generate(' '.join([i for i in df[col]]))\n",
+    "    \n",
+    "    plt.figure(figsize=(20, 10), facecolor='k')\n",
+    "    \n",
+    "    plt.imshow(wordcloud)\n",
+    "    \n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    # print date/time wordcloud is generated\n",
+    "    \n",
+    "    datetime_obj = datetime.datetime.now()\n",
+    "    \n",
+    "    time_delta = datetime.timedelta(hours=5)\n",
+    "    \n",
+    "    time_now_EST = datetime_obj - time_delta\n",
+    "    \n",
+    "    print('Wordcloud Generated at: ', time_now_EST, ' EST')"
+   ]
   }
  ],
  "metadata": {
