--- a/Not_Your_Mascot_datasets.ipynb
+++ b/Not_Your_Mascot_datasets.ipynb
@@ -295,9 +295,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### specific searches\n",
+    "## specific searches\n",
     "\n",
-    "I pulled 100,000 tweets containing the r-dskin slur; however this was just a drop in the bucket compared to the total number in existence. After checking to see whether certain terms appeared in the dataset, I decided to use the keyword search functionality in Twitter's API to look for specific words directly. My reasoning was that offensive words & phrases could be reasonably expected to appear with a racial slur; if the phrases appeared in the 'r-dskins' dataset, it would make sense to check them in others to compare how the words are used."
+    "I pulled a total 200,000 tweets containing the r-dskin slur; however this was just a drop in the bucket compared to the total number in existence. \n",
+    "\n",
+    "After checking to see whether certain terms appeared in the dataset, I decided to use the keyword search functionality in Twitter's API to look for specific words directly. \n",
+    "\n",
+    "My reasoning was that offensive words & phrases could be reasonably expected to appear with a racial slur; if the phrases appeared in the 'r-dskins' dataset, it would make sense to check them in others to compare how the words are used."
    ]
   },
   {
