--- a/Not_Your_Mascot_datasets.ipynb
+++ b/Not_Your_Mascot_datasets.ipynb
@@ -155,8 +155,7 @@
     }
    ],
    "source": [
-    "# get_tweet_object(search_term, start_date, end_date, num_of_tweets, include_retweets=True):\n",
-    "# return tweets_df\n",
+    "# test: see if we can get 100,000 tweets containing the 'r-dskins' slur/team name \n",
     "\n",
     "rdskins_tweet_objects = get_tweet_object('redskins', datetime.datetime(2007,1,24), datetime.datetime(2020,1,24), 100000, include_retweets=False)\n",
     "    "
@@ -5044,7 +5043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -5053,7 +5052,8 @@
      "text": [
       "offensive terms/phrases mentioned with the San Francisco 49ers:  44504\n",
       "offensive terms/phrases mentioned with the Washington R*dskins:  45878\n",
-      "offensive terms/phrases mentioned with the Kansas City Chiefs:  82386\n"
+      "offensive terms/phrases mentioned with the Kansas City Chiefs:  82386\n",
+      "total offensive terms/phrases in 49ers, R*dskins, & Chiefs tweets:  172768\n"
      ]
     }
    ],
@@ -5064,158 +5064,30 @@
     "\n",
     "terms_in_chiefs = len(kc_chiefs_terms_full_df)\n",
     "\n",
+    "total_offensive_terms = terms_in_49ers + terms_in_rs + terms_in_chiefs\n",
+    "\n",
     "print('offensive terms/phrases mentioned with the San Francisco 49ers: ', terms_in_49ers)\n",
     "\n",
     "print('offensive terms/phrases mentioned with the Washington R*dskins: ', terms_in_rs)\n",
     "\n",
-    "print('offensive terms/phrases mentioned with the Kansas City Chiefs: ', terms_in_chiefs)"
+    "print('offensive terms/phrases mentioned with the Kansas City Chiefs: ', terms_in_chiefs)\n",
+    "\n",
+    "print('total offensive terms/phrases in 49ers, R*dskins, & Chiefs tweets: ', total_offensive_terms)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### text processing functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_tweets_for_vocab(doc, search_term):\n",
-    "    \n",
-    "    '''\n",
-    "    takes input document:\n",
-    "    \n",
-    "    * lowercases\n",
-    "    * removes non-alpha characters\n",
-    "    * removes tweet artifacts (screen names, 'RT', '@')\n",
-    "    * removes stopwords\n",
-    "    * tokenizes\n",
-    "    \n",
-    "    returns clean document\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    # remove punctuation\n",
-    "    \n",
-    "    doc = ''.join(c if c.isalpha() else ' ' for c in doc)\n",
-    "    \n",
-    "    # tokenize\n",
-    "    \n",
-    "    split_tokens = doc.split()\n",
-    "    \n",
-    "    # remove twitter artifacts & search term\n",
-    "    \n",
-    "    cleaner_tokens = [word.lower() for word in split_tokens\n",
-    "                     if 'http' not in word\n",
-    "                     and '@' not in word\n",
-    "                     and '<' not in word\n",
-    "                     and 'RT' not in word\n",
-    "                     and 'amp' not in word.lower()\n",
-    "                     and search_term.lower() not in word.lower()\n",
-    "                     ]\n",
-    "    \n",
-    "    # remove stopwords\n",
-    "    \n",
-    "    clean_tokens = [t for t in cleaner_tokens if t.lower() not in stopwords.words('english')]\n",
-    "    \n",
-    "    return clean_tokens\n",
+    "### the verdict: over 170,000 offensive words & phrases\n",
     "\n",
-    "def get_vocab_df(docs):\n",
-    "    \n",
-    "    '''\n",
-    "    takes a list of clean docs\n",
-    "    \n",
-    "    returns dataframe with vocabulary counts\n",
-    "    returns total words\n",
-    "    returns unique words\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    vocab = []\n",
-    "    \n",
-    "    for document in docs:\n",
-    "        \n",
-    "        for word in document:\n",
-    "            \n",
-    "            vocab.append(word)\n",
-    "    \n",
-    "    total_words = len(vocab)\n",
-    "    \n",
-    "    word_count = Counter(vocab)\n",
-    "    \n",
-    "    num_unique_words = len(word_count)\n",
-    "    \n",
-    "    # Counter() is a dictionary, has to be converted as such\n",
-    "    \n",
-    "    vocab_df = pd.DataFrame.from_dict(word_count, orient='index')\n",
-    "    \n",
-    "    # rearrange the dataframe so it's easy to index/use\n",
-    "    # sort by number of times a word appears\n",
-    "    # add an index & rename columns\n",
-    "    \n",
-    "    vocab_df = vocab_df.sort_values(by=0, ascending=False)\n",
-    "    \n",
-    "    vocab_df = vocab_df.reset_index().rename(columns={'index':'word', 0:'count'})\n",
+    "I was able to find a total of 172,768 offensive terms & phrases used in conjunction with racist team names like the R-dskins & the the Chiefs.\n",
     "\n",
-    "    return vocab_df, total_words, num_unique_words\n",
+    "The NFL, team owners, & fans claiming that Washington's use of a slur as its team name is not offensive will need to explain away over 45,000 tweets containing violent and/or offensive imagery. This dataset is a resounding counter to the claim that the slur \"r-dskins\" is no longer used offensively. \n",
     "\n",
+    "The two teams in the 2020 Super Bowl provide the most telling comparison, since these teams could be expected to share a relatively similar amount of \"trash talk\" in the days leading up to the game. \n",
     "\n",
-    "def clean_text_for_wordcloud(df, col, search_term):\n",
-    "\n",
-    "    '''\n",
-    "    takes input dataframe\n",
-    "\n",
-    "    * applies light cleaning for wordcloud\n",
-    "    * removes search term, non alpha characters & tweet artifacts\n",
-    "\n",
-    "    returns dataframe with clean text\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    for i in range(len(df[col])):\n",
-    "        \n",
-    "        df[col][i] = ' '.join([word for word in df[col][i].split()\n",
-    "                               if 'http' not in word and '@' not in word\n",
-    "                               and '<' not in word and 'RT' not in word\n",
-    "                               and 'amp' not in word.lower() and 'rt' not in word\n",
-    "                               and search_term.lower() not in word.lower()])\n",
-    "        \n",
-    "    return df\n",
-    "\n",
-    "def get_wordcloud(df, col):\n",
-    "    \n",
-    "    '''\n",
-    "    takes a clean dataframe\n",
-    "    \n",
-    "    generates wordcloud\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    stopwords = set(STOPWORDS)\n",
-    "    \n",
-    "    wordcloud = WordCloud(background_color='white',\n",
-    "                          stopwords=stopwords,\n",
-    "                          random_state=0).generate(' '.join([i for i in df[col]]))\n",
-    "    \n",
-    "    plt.figure(figsize=(20, 10), facecolor='k')\n",
-    "    \n",
-    "    plt.imshow(wordcloud)\n",
-    "    \n",
-    "    plt.axis('off')\n",
-    "    \n",
-    "    # print date/time wordcloud is generated\n",
-    "    \n",
-    "    datetime_obj = datetime.datetime.now()\n",
-    "    \n",
-    "    time_delta = datetime.timedelta(hours=5)\n",
-    "    \n",
-    "    time_now_EST = datetime_obj - time_delta\n",
-    "    \n",
-    "    print('Wordcloud Generated at: ', time_now_EST, ' EST')"
+    "However that is not what the data show, and the difference could not be more stark: while the San Francisco 49ers team name is itself problematic with deep anti-Indigenous connotations, as demonstrated by over 44,000 rows of tweets containing offensive words & imagery, **the Kansas City Chiefs dataset is nearly twice as long, at *82,386* tweets.**"
    ]
   }
  ],
