created full terms df & csv

--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -4450,7 +4450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save to csv\n",
+    "# save to csv \n",
     "\n",
     "sf_49ers_terms_full_df.to_csv('sf_49ers_terms_full_df.csv')"
    ]
@@ -5089,7 +5089,75 @@
     "\n",
     "However that is not what the data show, and the difference could not be more stark: while the San Francisco 49ers team name is itself problematic with deep anti-Indigenous connotations, as demonstrated by over 44,000 rows of tweets containing offensive words & imagery, **the Kansas City Chiefs dataset is nearly twice as long, at *82,386* tweets.**\n",
     "\n",
-    "### visualizing anti-Indigenous speech around Native mascots"
+    "### visualizing anti-Indigenous speech around Native mascots\n",
+    "\n",
+    "With the data gathered, it's possible to visualize just how closely teams with Native-themed names are linked to racist speech.\n",
+    "\n",
+    "#### Combining Dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# term dataframes: \n",
+    "# wa_rs_terms_full_df, kc_chiefs_terms_full_df, sf_49ers_terms_full_df\n",
+    "\n",
+    "Not_Your_Mascot_full_df = pd.DataFrame()\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.append(wa_rs_terms_full_df, ignore_index=True)\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.append(kc_chiefs_terms_full_df, ignore_index=True)\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.append(sf_49ers_terms_full_df, ignore_index=True)\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.loc[:, ~Not_Your_Mascot_full_df.columns.str.contains('^Unnamed')]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172768\n",
+      "           author   term                                               text\n",
+      "0      jyoaee2125  dirty  @ProFootballTalk @hwkbgr Philly fans complain ...\n",
+      "1    Philly_Canes  dirty  So over the last 72 hours:\\n\\n- the Birds get ...\n",
+      "2  redskinsravens  dirty  @EvanMcMullin ✔    I'm a Redskins fan and born...\n",
+      "3   JimmyRandazzo  dirty  Giants, Cowboys and Redskins fans when the res...\n",
+      "4       DougieD35  dirty  @ParkerHamlett @Redskins Saints and ravens her...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(Not_Your_Mascot_full_df))\n",
+    "\n",
+    "print(Not_Your_Mascot_full_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "\n",
+    "Not_Your_Mascot_full_df.to_csv('Not_Your_Mascot_full_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizing the Data"
    ]
   },
   {
@@ -5097,7 +5165,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# wine_reviews['points'].value_counts().sort_index().plot.bar()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
