--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -5157,7 +5157,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualizing the Data"
+    "#### Visualizing the Data: General Distributions & Trends for All Three Teams\n",
+    "\n",
+    "The bar chart below shows frequencies for each term, drawn from the entire dataset. Even with the inclusion of the ostensibly racially-neutral 49ers, it's easy to see racially-linked speech heavily represented in the corpus."
    ]
   },
   {
@@ -5194,10 +5196,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
