--- a/Not_Your_Mascot_full.ipynb
+++ b/Not_Your_Mascot_full.ipynb
@@ -5098,12 +5098,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
     "# term dataframes: \n",
     "# wa_rs_terms_full_df, kc_chiefs_terms_full_df, sf_49ers_terms_full_df\n",
+    "\n",
+    "# add a 'team' column to each team corpus\n",
+    "\n",
+    "wa_rs_terms_full_df['team'] = 'rdskins'\n",
+    "\n",
+    "kc_chiefs_terms_full_df['team'] = 'chiefs'\n",
+    "\n",
+    "sf_49ers_terms_full_df['team'] = '49ers'\n",
+    "\n",
+    "# combine DFs\n",
     "\n",
     "Not_Your_Mascot_full_df = pd.DataFrame()\n",
     "\n",
@@ -5119,32 +5129,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "172768\n",
-      "           author   term                                               text\n",
-      "0      jyoaee2125  dirty  @ProFootballTalk @hwkbgr Philly fans complain ...\n",
-      "1    Philly_Canes  dirty  So over the last 72 hours:\\n\\n- the Birds get ...\n",
-      "2  redskinsravens  dirty  @EvanMcMullin ✔    I'm a Redskins fan and born...\n",
-      "3   JimmyRandazzo  dirty  Giants, Cowboys and Redskins fans when the res...\n",
-      "4       DougieD35  dirty  @ParkerHamlett @Redskins Saints and ravens her...\n"
+      "172768\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>team</th>\n",
+       "      <th>term</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jyoaee2125</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>@ProFootballTalk @hwkbgr Philly fans complain ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Philly_Canes</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>So over the last 72 hours:\\n\\n- the Birds get ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>redskinsravens</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>@EvanMcMullin ✔    I'm a Redskins fan and born...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JimmyRandazzo</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>Giants, Cowboys and Redskins fans when the res...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DougieD35</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>@ParkerHamlett @Redskins Saints and ravens her...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           author     team   term  \\\n",
+       "0      jyoaee2125  rdskins  dirty   \n",
+       "1    Philly_Canes  rdskins  dirty   \n",
+       "2  redskinsravens  rdskins  dirty   \n",
+       "3   JimmyRandazzo  rdskins  dirty   \n",
+       "4       DougieD35  rdskins  dirty   \n",
+       "\n",
+       "                                                text  \n",
+       "0  @ProFootballTalk @hwkbgr Philly fans complain ...  \n",
+       "1  So over the last 72 hours:\\n\\n- the Birds get ...  \n",
+       "2  @EvanMcMullin ✔    I'm a Redskins fan and born...  \n",
+       "3  Giants, Cowboys and Redskins fans when the res...  \n",
+       "4  @ParkerHamlett @Redskins Saints and ravens her...  "
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(len(Not_Your_Mascot_full_df))\n",
     "\n",
-    "print(Not_Your_Mascot_full_df.head())"
+    "Not_Your_Mascot_full_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5166,16 +5257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f61a2aa4f60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f619ea3ebe0>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     },
