--- a/datasets/Not_Your_Mascot_datasets.ipynb
+++ b/datasets/Not_Your_Mascot_datasets.ipynb
@@ -4450,7 +4450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save to csv\n",
+    "# save to csv \n",
     "\n",
     "sf_49ers_terms_full_df.to_csv('sf_49ers_terms_full_df.csv')"
    ]
@@ -5036,6 +5036,161 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Combining Corpora into One Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# term dataframes: \n",
+    "# wa_rs_terms_full_df, kc_chiefs_terms_full_df, sf_49ers_terms_full_df\n",
+    "\n",
+    "# add a 'team' column to each team corpus\n",
+    "\n",
+    "wa_rs_terms_full_df['team'] = 'rdskins'\n",
+    "\n",
+    "kc_chiefs_terms_full_df['team'] = 'chiefs'\n",
+    "\n",
+    "sf_49ers_terms_full_df['team'] = '49ers'\n",
+    "\n",
+    "# combine DFs\n",
+    "\n",
+    "Not_Your_Mascot_full_df = pd.DataFrame()\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.append(wa_rs_terms_full_df, ignore_index=True)\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.append(kc_chiefs_terms_full_df, ignore_index=True)\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.append(sf_49ers_terms_full_df, ignore_index=True)\n",
+    "\n",
+    "Not_Your_Mascot_full_df = Not_Your_Mascot_full_df.loc[:, ~Not_Your_Mascot_full_df.columns.str.contains('^Unnamed')]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172768\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>team</th>\n",
+       "      <th>term</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jyoaee2125</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>@ProFootballTalk @hwkbgr Philly fans complain ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Philly_Canes</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>So over the last 72 hours:\\n\\n- the Birds get ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>redskinsravens</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>@EvanMcMullin ✔    I'm a Redskins fan and born...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JimmyRandazzo</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>Giants, Cowboys and Redskins fans when the res...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DougieD35</td>\n",
+       "      <td>rdskins</td>\n",
+       "      <td>dirty</td>\n",
+       "      <td>@ParkerHamlett @Redskins Saints and ravens her...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           author     team   term  \\\n",
+       "0      jyoaee2125  rdskins  dirty   \n",
+       "1    Philly_Canes  rdskins  dirty   \n",
+       "2  redskinsravens  rdskins  dirty   \n",
+       "3   JimmyRandazzo  rdskins  dirty   \n",
+       "4       DougieD35  rdskins  dirty   \n",
+       "\n",
+       "                                                text  \n",
+       "0  @ProFootballTalk @hwkbgr Philly fans complain ...  \n",
+       "1  So over the last 72 hours:\\n\\n- the Birds get ...  \n",
+       "2  @EvanMcMullin ✔    I'm a Redskins fan and born...  \n",
+       "3  Giants, Cowboys and Redskins fans when the res...  \n",
+       "4  @ParkerHamlett @Redskins Saints and ravens her...  "
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(Not_Your_Mascot_full_df))\n",
+    "\n",
+    "Not_Your_Mascot_full_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "\n",
+    "Not_Your_Mascot_full_df.to_csv('Not_Your_Mascot_full_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### how many offensive terms exist in each team's data set?\n",
     "\n",
     "we can check to see how many of the 27 offensive terms appear in conjunction with each team's name:"
@@ -5087,7 +5242,7 @@
     "\n",
     "The two teams in the 2020 Super Bowl provide the most telling comparison, since these teams could be expected to share a relatively similar amount of \"trash talk\" in the days leading up to the game. \n",
     "\n",
-    "However that is not what the data show, and the difference could not be more stark: while the San Francisco 49ers team name is itself problematic with deep anti-Indigenous connotations, as demonstrated by over 44,000 rows of tweets containing offensive words & imagery, **the Kansas City Chiefs dataset is nearly twice as long, at *82,386* tweets.**"
+    "However that is not what the data show, and the difference could not be more stark: while the San Francisco 49ers team name is itself problematic with deep anti-Indigenous connotations, as demonstrated by over 44,000 rows of tweets containing offensive words & imagery, **the Kansas City Chiefs dataset is nearly twice as long, at *82,386* tweets.**\n"
    ]
   }
  ],
